# ros2-stm32-robot-controller-kit

./: .gitignore  README.md  ROADMAP.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation_fix.yml  feature_request.yml  hardware_support.yml
.github/workflows/: docs-check.yml  python-test.yml
content/: hackaday_article.md  reddit_post.md  youtube_demo_script.md
docs/: api_reference.md  c8t6_bringup_parts.md  datasheet.md  faq.md  firmware_overview.md  hardware_overview.md  quick_start.md  shipping_and_returns.md  troubleshooting.md
firmware/: README.md
firmware/App/: protocol.c  protocol.h
firmware/Config/: error_code.h  version.h
firmware/CubeIDE_workspace/: .cproject  .project
firmware/Drivers/: motor_driver.h
hardware/bom/: bringup_bom_gallery.md  (+1 more)
ops/: bringup_session_log_template.md  first_bringup_plan.md  fulfillment_sop.md  physical_action_checklist.md  purchase_decision_sheet.md  supplier_list.csv
ros2/robot_controller/: README.md  package.xml  setup.py
ros2/robot_controller/config/: default.yaml
ros2/robot_controller/launch/: demo.launch.py
ros2/robot_controller/robot_controller_ros2/: __init__.py  node.py
sdk/python/: README.md  pyproject.toml
sdk/python/examples/: basic_motor_control.py  mock_smoke_test.py
sdk/python/robot_controller/: __init__.py  client.py  exceptions.py  transport.py
sdk/python/tests/: test_mock_client.py
store/: pricing.md  shipping_matrix.csv  tindie_listing.md
tools/: c8t6_minimal_smoke.py  factory_test.py  local_smoke_check.py
(+8 files in other folders)
