[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "robot-controller"
version = "0.1.0"
description = "Python SDK for the ROS2-Compatible STM32 Robot Controller Kit"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "KITTIYOJIANG" }
]
dependencies = []

[project.optional-dependencies]
serial = ["pyserial>=3.5"]

[tool.setuptools.packages.find]
where = ["."]
include = ["robot_controller*"]
